1.3.4.0/_sources/Reference/NodeReference/GafferScene/StandardOptions.md.txt
StandardOptions
===============

Specifies the standard options (global settings) for the
scene. These should be respected by all renderers.

user
----

Container for user-defined plugs. Nodes
should never make their own plugs here,
so users are free to do as they wish.

out
---

The processed output scene.

enabled
-------

The on/off state of the node. When it is off, the node outputs the input scene unchanged.

in
--

The input scene

options
-------

The options to be applied - arbitrary numbers of user defined options may be added
as children of this plug via the user interface, or using the CompoundDataPlug API via
python.

options.renderCamera
--------------------

The primary camera to be used for rendering. If this
is not specified, then a default orthographic camera
positioned at the origin is used.

options.filmFit
---------------

How the aperture gate (the frame defined by the aperture) will
fit into the resolution gate (the framed defined by the data
window). Fitting is applied only if the respective aspect
ratios of the aperture and the resolution are different. The
following fitting modes are available:

- _Horizontal:_ The aperture gate will fit horizontally between
the left/right edges of the resolution gate, while preserving
its aspect ratio. If the aperture's aspect ratio is larger than
the resolution's, the top/bottom edges of the aperture will be
cropped. If it's smaller, then the top/bottom edges will
capture extra vertical scene content.
- _Vertical:_ The aperture gate will fit vertically between the
top/bottom edges of the resolution gate, while preserving its
aspect ratio. If the aperture's aspect ratio is larger than the
resolution's, the left/right edges of the aperture will be
cropped. If it's smaller, then the left/right edges will
capture more horizontal scene content.
- _Fit_: The aperture gate will fit horizontally (like
_Horizontal_ mode) or vertically (like _Vertical_ mode) inside
the resolution gate to avoid cropping the aperture, while
preserving its aspect ratio. If the two gates' aspect ratios
differ, the aperture will capture extra horizontal or vertical
scene content.
- _Fill:_ The aperture gate will fill the resolution gate such
that none of the aperture captures extra scene content, while
preserving its aspect ratio. In other words, it will make the
opposite choice of the _Fit_ mode. If the two gates' aspect
ratios differ, the aperture will be horizontally or vertically
cropped.
- _Distort:_ The aperture gate will match the size of the
resolution gate. If their aspect ratios differ, the resulting
image will appear vertically or horizontally stretched or
squeezed.

options.renderResolution
------------------------

The resolution of the image to be rendered.

options.pixelAspectRatio
------------------------

The `width / height` aspect ratio of the individual pixels in
the rendered image.

options.resolutionMultiplier
----------------------------

Multiplies the resolution of the render by this amount.

options.renderCropWindow
------------------------

Limits the render to a region of the image. The rendered image
will have the same resolution as usual, but areas outside the
crop will be rendered black. Coordinates range from (0,0) at
the top-left of the image to (1,1) at the bottom-right. The
crop window tool in the viewer may be used to set this
interactively.

options.overscan
----------------

Whether to enable overscan, which adds extra pixels to the
sides of the rendered image.

Overscan can be useful when camera shake or blur will be added
as a post-process. This plug just enables overscan as a whole –
use the _Overscan Top_, _Overscan Bottom_, _Overscan Left_ and
_Overscan Right_ plugs to specify the amount of overscan on
each side of the image.

options.overscanTop
-------------------

The amount of overscan at the top of the image. Specified as a
0-1 proportion of the original image height.

options.overscanBottom
----------------------

The amount of overscan at the bottom of the image. Specified as
a 0-1 proportion of the original image height.

options.overscanLeft
--------------------

The amount of overscan at the left of the image. Specified as a
0-1 proportion of the original image width.

options.overscanRight
---------------------

The amount of overscan at the right of the image. Specified as
a 0-1 proportion of the original image width.

options.depthOfField
--------------------

Whether to render with depth of field. To ensure the effect is
visible, you must also set an f-stop value greater than 0 on
this camera.

options.includedPurposes
------------------------

Limits the objects included in the render according to the values of their `usd:purpose`
attribute. The "Default" purpose includes all objects which have no `usd:purpose` attribute;
other than for debugging, there is probably no good reason to omit it.

> Tip : Use the USDAttributes node to assign the `usd:purpose` attribute.

options.transformBlur
---------------------

Whether or not transform motion is taken into
account in the renderered image. To specify the
number of transform segments to use for each
object in the scene, use a StandardAttributes node
with appropriate filters.

options.deformationBlur
-----------------------

Whether or not deformation motion is taken into
account in the renderered image. To specify the
number of deformation segments to use for each
object in the scene, use a StandardAttributes node
with appropriate filters.

options.shutter
---------------

The interval over which the camera shutter is open. Measured
in frames, and specified relative to the frame being rendered.

options.sampleMotion
--------------------

Whether to actually render motion blur.  Disabling this
setting while motion blur is set up produces a render where
there is no blur, but there is accurate motion information.
Useful for rendering motion vector passes.

options.performanceMonitor
--------------------------

Enables a performance monitor and uses it to output
statistics about scene generation performance.

extraOptions
------------

An additional set of options to be added. Arbitrary numbers
of options may be specified within a single `IECore.CompoundObject`,
where each key/value pair in the object defines an option.
This is convenient when using an expression to define the options
and the option count might be dynamic. It can also be used to
create options whose type cannot be handled by the `options`
CompoundDataPlug.

If the same option is defined by both the `options` and the
`extraOptions` plugs, then the value from the `extraOptions`
is taken.